gitops/workloads/microservices/resumind/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resumind
spec:
  replicas: 2
  selector:
    matchLabels:
      app: resumind
  template:
    metadata:
      labels:
        app: resumind
    spec:
      containers:
        - name: app
          image: nooblearn2code/resumind:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
