gitops/workloads/microservices/resumind/service.yml
apiVersion: v1
kind: Service
metadata:
  name: resumind-svc
spec:
  selector:
    app: resumind
  ports:
    - port: 80
      targetPort: 3000
