gitops/workloads/microservices/resumind/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: resumind-ingress
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`resumind.nooblearn2code.com`)
      kind: Rule
      services:
        - name: resumind-svc
          port: 80
